# jaybenne

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.gitlab/merge_request_templates/: Default.md
analysis/: jhdf.py  plot.py
env/: bash
inputs/: inf.in  inf_mg.in  inf_stiff.in  stepdiff.in  stepdiff_ddmc.in  stepdiff_smr.in  stepdiff_smr_ddmc.in  stepdiff_smr_hybrid.in
src/: CMakeLists.txt
src/jaybenne/: CMakeLists.txt  boundaries.hpp  jaybenne.cpp  jaybenne.hpp  jaybenne_config.hpp.in  jaybenne_utils.hpp  jaybenne_variables.hpp  planck.hpp  population_control.cpp  sample_ddmc_bface.cpp  scattering.hpp  sourcing.cpp  transport.cpp  transport_ddmc.cpp  transport_utils.hpp
src/mcblock/: CMakeLists.txt  eos.hpp  main.cpp  mcblock.cpp  mcblock.hpp  mcblock_driver.cpp  mcblock_driver.hpp  mcblock_variables.hpp  opacity.hpp
style/: format.sh
tst/: launch_ci_runner.py  regression_test.py  stepdiff.py  stepdiff_smr.py
